k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: grid-deprecation
    toolforge: tool
  namespace: tool-grid-deprecation
  name: grid-deprecation
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grid-deprecation
      toolforge: tool
  template:
    metadata:
      labels:
        name: grid-deprecation
        toolforge: tool
    spec:
      # The serviceAccountName is special magic. Not for all tools.
      serviceAccountName: grid-deprecation-obs
      containers:
        - name: webservice
          image: docker-registry.tools.wmflabs.org/toolforge-python39-sssd-web:latest
          command:
            - /usr/bin/webservice-runner
            - --type
            - uwsgi-python
            - --port
            - "8000"
          imagePullPolicy: Always
          ports:
          - containerPort: 8000
            name: http
            protocol: TCP
          workingDir: /data/project/grid-deprecation
